# Valkyrie-V

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PROD_READY_GATE.md  README.md  README_TR.md  SECURITY.md  benchmark_results.txt  build_output.txt  test_output.txt  vmm_benchmark_results.txt
.github/workflows/: ci.yml
benches/: benchmarks.toml  micro_bench.rs  vmm_bench.rs
examples/echos/: valkyrie_bridge.c
fuzz/: Cargo.toml
fuzz/fuzz_targets/: controlplane_sanity.rs
include/: valkyrie_v.h
ops/release_2026-02-27/: 00_metrics.txt  01_cargo_check.txt  02_cargo_test.txt  03_cargo_build_release.txt  04_cargo_fmt_check.txt  05_cargo_clippy.txt  06_cargo_audit.json  06_cargo_audit.txt  06_cargo_audit_install.txt  07_ws_test_after_bin_gate.txt  08_release_after_bin_gate.txt  09_baremetal_lib_build.txt  09_ws_test_after_panic_fix.txt  10_clippy_after_lowrisk_cleanup.txt  11_clippy_after_wave2.txt  12_clippy_after_wave2_fasttrack.txt  13_clippy_after_wave2_bulkwaivers.txt  14_cargo_build_release_after_wave2.txt  FINAL_GO_NO_GO.md  FLAKY_QUARANTINE.md  MATRIX_RERUN.md  MID_GATE_REVIEW.md  OPERATOR_RUNBOOK.md  OWNERS_BLOCKERS.md  RC_CANDIDATE.md  README.md  RELEASE_NOTES_RC0.md  SECURITY_DECISION_LOG.md  STRESS_SOAK_PLAN.md  TRACKER.md  WARNING_BURNDOWN.md  WARNING_TRIAGE_PLAN.md
src/: lib.rs  main.rs
src/vmm/: advanced_io.rs  advanced_memory.rs  advanced_security.rs  amdvi.rs  apic.rs  apicv.rs  atlas.rs  balloon.rs  balloon_enhanced.rs  cbt.rs  chase_lev.rs  chronos.rs  cloud.rs  d3d_intercept.rs  debug.rs  disk_image.rs  dxbc_spirv.rs  enterprise.rs  ept.rs  ept_cache.rs  fault_tolerance.rs  file_backend.rs  game_bridge.rs  (+62 more)
(+19 files in other folders)
