[package]
name = "valkyrie_v"
version = "0.1.0"
edition = "2021"

[dependencies]
ironshim = { package = "ironshim-rs", git = "https://github.com/asosyal04440/IronShim-rs" }
libm = "0.2"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "errhandlingapi", "minwinbase", "winbase", "winerror"] }

[features]
default = []
baremetal-bin = []
baremetal-lib = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.test]
panic = "abort"

[profile.bench]
panic = "abort"

[lib]
name = "valkyrie_v"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "valkyrie_v"
path = "src/main.rs"
bench = false
required-features = ["baremetal-bin"]

[[bench]]
name = "micro_bench"
harness = false

[[bench]]
name = "vmm_bench"
harness = false
